# lib/db/src/schema/supplySources.ts
@@ -6,6 +6,9 @@ export const supplySourcesTable = pgTable("supply_sources", {
   id: serial("id").primaryKey(),
   name: text("name").notNull(),
   inventoryValue: integer("inventory_value").notNull().default(0),
+  phone: text("phone"),
+  email: text("email"),
+  note: text("note"),
 });
 
 export const insertSupplySourceSchema = createInsertSchema(supplySourcesTable).omit({ id: true });
